lab4/Code/syntax.output
Terminals unused in grammar

    SPACE
    NLINE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier FunDec error SEMI
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList
   13           | VarDec error
   14           | error COMMA ExtDecList

   15 Specifier: TYPE
   16          | StructSpecifier

   17 StructSpecifier: STRUCT OptTag LC DefList RC
   18                | STRUCT Tag
   19                | STRUCT OptTag LC error RC

   20 OptTag: ID
   21       | ε

   22 Tag: ID

   23 VarDec: ID
   24       | VarDec LB INT RB
   25       | VarDec LB error RB
   26       | VarDec LB error

   27 FunDec: ID LP VarList RP
   28       | ID LP RP
   29       | error LP VarList RP
   30       | ID LP error RP

   31 VarList: ParamDec COMMA VarList
   32        | ParamDec
   33        | error COMMA VarList

   34 ParamDec: Specifier VarDec

   35 CompSt: LC DefList StmtList RC
   36       | error RC

   37 StmtList: Stmt StmtList
   38         | ε

   39 Stmt: Exp SEMI
   40     | CompSt
   41     | RETURN Exp SEMI
   42     | IF LP Exp RP Stmt
   43     | IF LP Exp RP Stmt ELSE Stmt
   44     | WHILE LP Exp RP Stmt
   45     | Exp error
   46     | RETURN Exp error
   47     | error SEMI
   48     | RETURN error SEMI

   49 DefList: Def DefList
   50        | ε

   51 Def: Specifier DecList SEMI
   52    | Specifier error SEMI

   53 DecList: Dec
   54        | Dec COMMA DecList
   55        | Dec error DecList
   56        | Dec error

   57 Dec: VarDec
   58    | VarDec ASSIGNOP Exp
   59    | VarDec ASSIGNOP error

   60 Exp: Exp ASSIGNOP Exp
   61    | Exp AND Exp
   62    | Exp OR Exp
   63    | Exp RELOP Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp STAR Exp
   67    | Exp DIV Exp
   68    | LP Exp RP
   69    | MINUS Exp
   70    | NOT Exp
   71    | ID LP Args RP
   72    | ID LP RP
   73    | Exp LB Exp RB
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT
   78    | Exp ASSIGNOP error
   79    | Exp AND error
   80    | Exp OR error
   81    | Exp RELOP error
   82    | Exp PLUS error
   83    | Exp MINUS error
   84    | Exp STAR error
   85    | Exp DIV error
   86    | LP error RP
   87    | MINUS error
   88    | NOT error
   89    | ID LP error RP
   90    | Exp LB error RB

   91 Args: Exp COMMA Args
   92     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 13 14 19 25 26 29 30 33 36 45 46 47 48 52 55 56 59 78 79 80 81 82 83 84 85 86 87 88 89 90
    INT <type_node> (258) 24 76
    FLOAT <type_node> (259) 77
    ID <type_node> (260) 20 22 23 27 28 30 71 72 74 75 89
    SEMI <type_node> (261) 4 5 7 8 39 41 47 48 51 52
    COMMA <type_node> (262) 11 14 31 33 54 91
    ASSIGNOP <type_node> (263) 58 59 60 78
    RELOP <type_node> (264) 63 81
    PLUS <type_node> (265) 64 82
    MINUS <type_node> (266) 65 69 83 87
    STAR <type_node> (267) 66 84
    DIV <type_node> (268) 67 85
    AND <type_node> (269) 61 79
    OR <type_node> (270) 62 80
    DOT <type_node> (271) 74
    NOT <type_node> (272) 70 88
    TYPE <type_node> (273) 15
    LP <type_node> (274) 27 28 29 30 42 43 44 68 71 72 86 89
    RP <type_node> (275) 27 28 29 30 42 43 44 68 71 72 86 89
    LB <type_node> (276) 24 25 26 73 90
    RB <type_node> (277) 24 25 73 90
    LC <type_node> (278) 17 19 35
    RC <type_node> (279) 17 19 35 36
    STRUCT <type_node> (280) 17 18 19
    RETURN <type_node> (281) 41 46 48
    IF <type_node> (282) 42 43
    ELSE <type_node> (283) 43
    WHILE <type_node> (284) 44
    SPACE <type_node> (285)
    NLINE <type_node> (286)
    LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Program <type_node> (34)
        on left: 1
        on right: 0
    ExtDefList <type_node> (35)
        on left: 2 3
        on right: 1 2
    ExtDef <type_node> (36)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <type_node> (37)
        on left: 10 11 12 13 14
        on right: 4 11 12 14
    Specifier <type_node> (38)
        on left: 15 16
        on right: 4 5 6 8 9 34 51 52
    StructSpecifier <type_node> (39)
        on left: 17 18 19
        on right: 16
    OptTag <type_node> (40)
        on left: 20 21
        on right: 17 19
    Tag <type_node> (41)
        on left: 22
        on right: 18
    VarDec <type_node> (42)
        on left: 23 24 25 26
        on right: 10 11 12 13 24 25 26 34 57 58 59
    FunDec <type_node> (43)
        on left: 27 28 29 30
        on right: 6 8
    VarList <type_node> (44)
        on left: 31 32 33
        on right: 27 29 31 33
    ParamDec <type_node> (45)
        on left: 34
        on right: 31 32
    CompSt <type_node> (46)
        on left: 35 36
        on right: 6 40
    StmtList <type_node> (47)
        on left: 37 38
        on right: 35 37
    Stmt <type_node> (48)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 37 42 43 44
    DefList <type_node> (49)
        on left: 49 50
        on right: 17 35 49
    Def <type_node> (50)
        on left: 51 52
        on right: 49
    DecList <type_node> (51)
        on left: 53 54 55 56
        on right: 51 54 55
    Dec <type_node> (52)
        on left: 57 58 59
        on right: 53 54 55 56
    Exp <type_node> (53)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 39 41 42 43 44 45 46 58 60 61 62 63 64 65 66 67 68 69 70 73 74 78 79 80 81 82 83 84 85 90 91 92
    Args <type_node> (54)
        on left: 91 92
        on right: 71 91


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   15 Specifier: TYPE •

    $default  reduce using rule 15 (Specifier)


State 3

   17 StructSpecifier: STRUCT • OptTag LC DefList RC
   18                | STRUCT • Tag
   19                | STRUCT • OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    8       | Specifier • FunDec error SEMI
    9       | Specifier • error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   16 Specifier: StructSpecifier •

    $default  reduce using rule 16 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   20 OptTag: ID •
   22 Tag: ID •

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 22 (Tag)


State 11

   17 StructSpecifier: STRUCT OptTag • LC DefList RC
   19                | STRUCT OptTag • LC error RC

    LC  shift, and go to state 21


State 12

   18 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 18 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

    9 ExtDef: Specifier error •
   14 ExtDecList: error • COMMA ExtDecList
   29 FunDec: error • LP VarList RP

    COMMA  shift, and go to state 22
    LP     shift, and go to state 23

    $default  reduce using rule 9 (ExtDef)


State 16

   23 VarDec: ID •
   27 FunDec: ID • LP VarList RP
   28       | ID • LP RP
   30       | ID • LP error RP

    LP  shift, and go to state 24

    $default  reduce using rule 23 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 25


State 19

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   12           | VarDec • error ExtDecList
   13           | VarDec • error
   24 VarDec: VarDec • LB INT RB
   25       | VarDec • LB error RB
   26       | VarDec • LB error

    error  shift, and go to state 26
    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    SEMI  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt
    8       | Specifier FunDec • error SEMI

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   17 StructSpecifier: STRUCT OptTag LC • DefList RC
   19                | STRUCT OptTag LC • error RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

   14 ExtDecList: error COMMA • ExtDecList

    error  shift, and go to state 36
    ID     shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 23

   29 FunDec: error LP • VarList RP

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 24

   27 FunDec: ID LP • VarList RP
   28       | ID LP • RP
   30       | ID LP • error RP

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    RP      shift, and go to state 44
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 45
    ParamDec         go to state 42


State 25

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 26

   12 ExtDecList: VarDec error • ExtDecList
   13           | VarDec error •

    error  shift, and go to state 36
    ID     shift, and go to state 37

    SEMI  reduce using rule 13 (ExtDecList)

    ExtDecList  go to state 46
    VarDec      go to state 19


State 27

   11 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 36
    ID     shift, and go to state 37

    ExtDecList  go to state 47
    VarDec      go to state 19


State 28

   24 VarDec: VarDec LB • INT RB
   25       | VarDec LB • error RB
   26       | VarDec LB • error

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 29

    8 ExtDef: Specifier FunDec error • SEMI
   36 CompSt: error • RC

    SEMI  shift, and go to state 50
    RC    shift, and go to state 51


State 30

   35 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 50 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 32

   19 StructSpecifier: STRUCT OptTag LC error • RC

    RC  shift, and go to state 53


State 33

   51 Def: Specifier • DecList SEMI
   52    | Specifier • error SEMI

    error  shift, and go to state 54
    ID     shift, and go to state 37

    VarDec   go to state 55
    DecList  go to state 56
    Dec      go to state 57


State 34

   17 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 58


State 35

   49 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 50 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 59
    Def              go to state 35


State 36

   14 ExtDecList: error • COMMA ExtDecList

    COMMA  shift, and go to state 22


State 37

   23 VarDec: ID •

    $default  reduce using rule 23 (VarDec)


State 38

   14 ExtDecList: error COMMA ExtDecList •

    $default  reduce using rule 14 (ExtDecList)


State 39

   33 VarList: error • COMMA VarList

    COMMA  shift, and go to state 60


State 40

   34 ParamDec: Specifier • VarDec

    ID  shift, and go to state 37

    VarDec  go to state 61


State 41

   29 FunDec: error LP VarList • RP

    RP  shift, and go to state 62


State 42

   31 VarList: ParamDec • COMMA VarList
   32        | ParamDec •

    COMMA  shift, and go to state 63

    $default  reduce using rule 32 (VarList)


State 43

   30 FunDec: ID LP error • RP
   33 VarList: error • COMMA VarList

    COMMA  shift, and go to state 60
    RP     shift, and go to state 64


State 44

   28 FunDec: ID LP RP •

    $default  reduce using rule 28 (FunDec)


State 45

   27 FunDec: ID LP VarList • RP

    RP  shift, and go to state 65


State 46

   12 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 12 (ExtDecList)


State 47

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 48

   25 VarDec: VarDec LB error • RB
   26       | VarDec LB error •

    RB  shift, and go to state 66

    $default  reduce using rule 26 (VarDec)


State 49

   24 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 67


State 50

    8 ExtDef: Specifier FunDec error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 51

   36 CompSt: error RC •

    $default  reduce using rule 36 (CompSt)


State 52

   35 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 68
    INT     shift, and go to state 69
    FLOAT   shift, and go to state 70
    ID      shift, and go to state 71
    MINUS   shift, and go to state 72
    NOT     shift, and go to state 73
    LP      shift, and go to state 74
    LC      shift, and go to state 30
    RETURN  shift, and go to state 75
    IF      shift, and go to state 76
    WHILE   shift, and go to state 77

    RC  reduce using rule 38 (StmtList)

    CompSt    go to state 78
    StmtList  go to state 79
    Stmt      go to state 80
    Exp       go to state 81


State 53

   19 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 19 (StructSpecifier)


State 54

   52 Def: Specifier error • SEMI

    SEMI  shift, and go to state 82


State 55

   24 VarDec: VarDec • LB INT RB
   25       | VarDec • LB error RB
   26       | VarDec • LB error
   57 Dec: VarDec •
   58    | VarDec • ASSIGNOP Exp
   59    | VarDec • ASSIGNOP error

    ASSIGNOP  shift, and go to state 83
    LB        shift, and go to state 28

    $default  reduce using rule 57 (Dec)


State 56

   51 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 84


State 57

   53 DecList: Dec •
   54        | Dec • COMMA DecList
   55        | Dec • error DecList
   56        | Dec • error

    error  shift, and go to state 85
    COMMA  shift, and go to state 86

    SEMI  reduce using rule 53 (DecList)


State 58

   17 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 17 (StructSpecifier)


State 59

   49 DefList: Def DefList •

    $default  reduce using rule 49 (DefList)


State 60

   33 VarList: error COMMA • VarList

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 87
    ParamDec         go to state 42


State 61

   24 VarDec: VarDec • LB INT RB
   25       | VarDec • LB error RB
   26       | VarDec • LB error
   34 ParamDec: Specifier VarDec •

    LB  shift, and go to state 28

    $default  reduce using rule 34 (ParamDec)


State 62

   29 FunDec: error LP VarList RP •

    $default  reduce using rule 29 (FunDec)


State 63

   31 VarList: ParamDec COMMA • VarList

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 88
    ParamDec         go to state 42


State 64

   30 FunDec: ID LP error RP •

    $default  reduce using rule 30 (FunDec)


State 65

   27 FunDec: ID LP VarList RP •

    $default  reduce using rule 27 (FunDec)


State 66

   25 VarDec: VarDec LB error RB •

    $default  reduce using rule 25 (VarDec)


State 67

   24 VarDec: VarDec LB INT RB •

    $default  reduce using rule 24 (VarDec)


State 68

   36 CompSt: error • RC
   47 Stmt: error • SEMI

    SEMI  shift, and go to state 89
    RC    shift, and go to state 51


State 69

   76 Exp: INT •

    $default  reduce using rule 76 (Exp)


State 70

   77 Exp: FLOAT •

    $default  reduce using rule 77 (Exp)


State 71

   71 Exp: ID • LP Args RP
   72    | ID • LP RP
   75    | ID •
   89    | ID • LP error RP

    LP  shift, and go to state 90

    $default  reduce using rule 75 (Exp)


State 72

   69 Exp: MINUS • Exp
   87    | MINUS • error

    error  shift, and go to state 91
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 92


State 73

   70 Exp: NOT • Exp
   88    | NOT • error

    error  shift, and go to state 93
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 94


State 74

   68 Exp: LP • Exp RP
   86    | LP • error RP

    error  shift, and go to state 95
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 96


State 75

   41 Stmt: RETURN • Exp SEMI
   46     | RETURN • Exp error
   48     | RETURN • error SEMI

    error  shift, and go to state 97
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 98


State 76

   42 Stmt: IF • LP Exp RP Stmt
   43     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 99


State 77

   44 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 100


State 78

   40 Stmt: CompSt •

    $default  reduce using rule 40 (Stmt)


State 79

   35 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 101


State 80

   37 StmtList: Stmt • StmtList

    error   shift, and go to state 68
    INT     shift, and go to state 69
    FLOAT   shift, and go to state 70
    ID      shift, and go to state 71
    MINUS   shift, and go to state 72
    NOT     shift, and go to state 73
    LP      shift, and go to state 74
    LC      shift, and go to state 30
    RETURN  shift, and go to state 75
    IF      shift, and go to state 76
    WHILE   shift, and go to state 77

    RC  reduce using rule 38 (StmtList)

    CompSt    go to state 78
    StmtList  go to state 102
    Stmt      go to state 80
    Exp       go to state 81


State 81

   39 Stmt: Exp • SEMI
   45     | Exp • error
   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   90    | Exp • LB error RB

    error     shift, and go to state 103
    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 105
    RELOP     shift, and go to state 106
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    STAR      shift, and go to state 109
    DIV       shift, and go to state 110
    AND       shift, and go to state 111
    OR        shift, and go to state 112
    DOT       shift, and go to state 113
    LB        shift, and go to state 114


State 82

   52 Def: Specifier error SEMI •

    $default  reduce using rule 52 (Def)


State 83

   58 Dec: VarDec ASSIGNOP • Exp
   59    | VarDec ASSIGNOP • error

    error  shift, and go to state 115
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 116


State 84

   51 Def: Specifier DecList SEMI •

    $default  reduce using rule 51 (Def)


State 85

   55 DecList: Dec error • DecList
   56        | Dec error •

    ID  shift, and go to state 37

    $default  reduce using rule 56 (DecList)

    VarDec   go to state 55
    DecList  go to state 117
    Dec      go to state 57


State 86

   54 DecList: Dec COMMA • DecList

    ID  shift, and go to state 37

    VarDec   go to state 55
    DecList  go to state 118
    Dec      go to state 57


State 87

   33 VarList: error COMMA VarList •

    $default  reduce using rule 33 (VarList)


State 88

   31 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 31 (VarList)


State 89

   47 Stmt: error SEMI •

    $default  reduce using rule 47 (Stmt)


State 90

   71 Exp: ID LP • Args RP
   72    | ID LP • RP
   89    | ID LP • error RP

    error  shift, and go to state 119
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74
    RP     shift, and go to state 120

    Exp   go to state 121
    Args  go to state 122


State 91

   87 Exp: MINUS error •

    $default  reduce using rule 87 (Exp)


State 92

   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   69    | MINUS Exp •
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   90    | Exp • LB error RB

    STAR  shift, and go to state 109
    DIV   shift, and go to state 110
    DOT   shift, and go to state 113
    LB    shift, and go to state 114

    $default  reduce using rule 69 (Exp)


State 93

   88 Exp: NOT error •

    $default  reduce using rule 88 (Exp)


State 94

   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   70    | NOT Exp •
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   90    | Exp • LB error RB

    DOT  shift, and go to state 113
    LB   shift, and go to state 114

    $default  reduce using rule 70 (Exp)


State 95

   86 Exp: LP error • RP

    RP  shift, and go to state 123


State 96

   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   68    | LP Exp • RP
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   90    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 105
    RELOP     shift, and go to state 106
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    STAR      shift, and go to state 109
    DIV       shift, and go to state 110
    AND       shift, and go to state 111
    OR        shift, and go to state 112
    DOT       shift, and go to state 113
    RP        shift, and go to state 124
    LB        shift, and go to state 114


State 97

   48 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 125


State 98

   41 Stmt: RETURN Exp • SEMI
   46     | RETURN Exp • error
   60 Exp: Exp • ASSIGNOP Exp
   61    | Exp • AND Exp
   62    | Exp • OR Exp
   63    | Exp • RELOP Exp
   64    | Exp • PLUS Exp
   65    | Exp • MINUS Exp
   66    | Exp • STAR Exp
   67    | Exp • DIV Exp
   73    | Exp • LB Exp RB
   74    | Exp • DOT ID
   78    | Exp • ASSIGNOP error
   79    | Exp • AND error
   80    | Exp • OR error
   81    | Exp • RELOP error
   82    | Exp • PLUS error
   83    | Exp • MINUS error
   84    | Exp • STAR error
   85    | Exp • DIV error
   90    | Exp • LB error RB

    error     shift, and go to state 126
    SEMI      shift, and go to state 127
    ASSIGNOP  shift, and go to state 105
    RELOP     shift, and go to state 106
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    STAR      shift, and go to state 109
    DIV       shift, and go to state 110
    AND       shift, and go to state 111
    OR        shift, and go to state 112
    DOT       shift, and go to state 113
    LB        shift, and go to state 114


State 99

   42 Stmt: IF LP • Exp RP Stmt
   43     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 128


State 100

   44 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 129


State 101

   35 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 35 (CompSt)


State 102

   37 StmtList: Stmt StmtList •

    $default  reduce using rule 37 (StmtList)


State 103

   45 Stmt: Exp error •

    $default  reduce using rule 45 (Stmt)


State 104

   39 Stmt: Exp SEMI •

    $default  reduce using rule 39 (Stmt)


State 105

   60 Exp: Exp ASSIGNOP • Exp
   78    | Exp ASSIGNOP • error

    error  shift, and go to state 130
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 131


State 106

   63 Exp: Exp RELOP • Exp
   81    | Exp RELOP • error

    error  shift, and go to state 132
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 133


State 107

   64 Exp: Exp PLUS • Exp
   82    | Exp PLUS • error

    error  shift, and go to state 134
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 135


State 108

   65 Exp: Exp MINUS • Exp
   83    | Exp MINUS • error

    error  shift, and go to state 136
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 137


State 109

   66 Exp: Exp STAR • Exp
   84    | Exp STAR • error

    error  shift, and go to state 138
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 139


State 110

   67 Exp: Exp DIV • Exp
   85    | Exp DIV • error

    error  shift, and go to state 140
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 141


State 111

   61 Exp: Exp AND • Exp
   79    | Exp AND • error

    error  shift, and go to state 142
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 143


State 112

   62 Exp: Exp OR • Exp
   80    | Exp OR • error

    error  shift, and go to state 144
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 145


State 113

   74 Exp: Exp DOT • ID

    ID  shift, and go to state 146


State 114

   73 Exp: Exp LB • Exp RB
   90    | Exp LB • error RB

    error  shift, and go to state 147
    INT    shift, and go to state 69
    FLOAT  shift, and go to state 70
    ID     shift, and go to state 71
    MINUS  shift, and go to state 72
    NOT    shift, and go to state 73
    LP     shift, and go to state 74

    Exp  go to state 148


State 115

   59 Dec: VarDec ASSIGNOP error •

    $default  reduce using rule 59 (Dec)


State 116
